# cuekiyo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  skills-lock.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  enums.py  exceptions.py  main.py  models.py  state_machine.py
backend/app/api/: deps.py  routes.py
backend/app/jobs/: parallel.py  runner.py  websocket_manager.py
backend/app/schemas/: __init__.py  anime.py  job.py  overlay.py  project.py  settings.py  song.py
backend/app/services/: anilist_client.py  anime_list_parser.py  anime_metadata.py  ffmpeg_engine.py  heatmap.py  jikan_client.py  overlay_renderer.py  paths.py  theme_parser.py  youtube_sourcer.py  (+1 more)
backend/tests/: conftest.py  test_anilist_client.py  test_anime_list_parser.py  test_audio_resume.py  test_audit_fixes.py  test_clip_download.py  test_clip_trim_api.py  test_clip_trim_gate.py  test_clip_trim_runner.py  test_database_migration.py  test_ffmpeg_quality.py  test_manual_candidate.py  test_overlay_config.py  test_overlay_preview.py  test_overlay_renderer.py  test_parallel.py  test_png_overlay.py  test_project_delete.py  test_project_duplicate.py  test_project_source_mode_api.py  test_render_again.py  test_scoring.py  test_security_fixes.py  test_settings_api.py  test_stage_resume.py  test_state_machine.py  test_state_machine_manual_source.py  test_unlimited_songs.py  test_youtube_sourcer.py  test_youtube_thumbnails.py  test_youtube_url.py
(+129 files in other folders)
