[project]
name = "video-pipeline-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.13"
description = "Local anime MV pipeline API"
readme = "../README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
